--- a/style.css
+++ b/style.css
@@ -146,7 +146,7 @@ iframe {
 .image-wrapper {
     flex: 0 0 auto;
     margin-right: 20px;
-    text-align: center;
+    text-align: center
 }
 
 img {
@@ -159,4 +159,5 @@ img {
 .image-wrapper a {
     display: block;
     text-align: center;
+    margin-left: -17
 }
