--- a/style.css
+++ b/style.css
@@ -146,19 +146,18 @@ iframe {
 .image-wrapper {
     flex: 0 0 auto;
     margin-right: 20px;
-    text-align: center;
-    display: flex;
-    flex-direction: column;
-    align-items: center
+    text-align: center
 }
 
 img {
     width: 300px;
     height: auto;
-    margin-bottom: 15px
+    margin-bottom: 15px;
+    margin-left: 15px
 }
 
-.image-wrapper a,
-.image-wrapper p {
-    margin: 0
+.image-wrapper a {
+    display: block;
+    text-align: center;
+    margin-left: -25px
 }
