--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+* {
+    cursor: none;
+}
+
 body {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     background-color: #121212;
@@ -173,3 +177,76 @@ img {
 html{
     scroll-behavior: smooth;
 }
+
+.happyTrail {
+    position: absolute;
+    width: 8px;
+    height: 8px;
+    background: #f00;
+    border-radius: 50%;
+    opacity: 0.8;
+    pointer-events: none;
+    filter: blur(3px);
+    animation-duration: 0.5s;
+    animation-name: rainbowFade;
+    animation-timing-function: ease;
+    z-index: 9999
+}
+  
+  @keyframes rainbowFade {
+    0% {
+      background: #f00;
+    }
+   
+    20% {
+      background: #f80;
+    }
+   
+    40% {
+      background: #ff0;
+    }
+    
+    60% {
+      background: #0f0;
+    }
+   
+    80% {
+      background: #00f;
+          opacity: 0.8;
+    }
+   
+    100% {
+      background: #f0f;
+      opacity: 0;
+    }
+}
+
+.inner-cursor {
+    position: fixed;
+    left: 10px;
+    width: 10px;
+    height: 10px;
+    transform: translate(-50%, -50%);
+    background: white;
+    mix-blend-mode: difference;
+    border-radius: 50%;
+    pointer-events: none;
+    transition: width 0.5s height 0.5s;
+    pointer-events: none;
+    z-index: 9999
+  }
+  
+  .outer-cursor {
+    position: fixed;
+    left: 10px;
+    width: 25px;
+    height: 25px;
+    transform: translate(-50%, -50%);
+    border: 2px solid white;
+    mix-blend-mode: difference;
+    border-radius: 50%;
+    pointer-events: 0.1ms;
+    transition: 0.1s;
+    pointer-events: none;
+    z-index: 9999
+  }
