--- a/style.css
+++ b/style.css
@@ -2,6 +2,10 @@
     cursor: none;
 }
 
+html{
+    scroll-behavior: smooth;
+}
+
 body {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     background-color: #121212;
@@ -104,7 +108,7 @@ nav a:hover {
 .dropdown {
     position: relative;
     display: inline-block;
-    padding: 5px 5px
+    padding: 5px 5px;
 }
 
 .dropdown-content {
@@ -139,7 +143,7 @@ nav a:hover {
 }
 
 .dropdown:hover .dropdown-content {
-    display: block
+    display: block;
 }
 
 iframe {
@@ -172,10 +176,6 @@ img {
 .image-wrapper a {
     display: block;
     text-align: left;
-}
-
-html{
-    scroll-behavior: smooth;
 }
 
 .happyTrail {
@@ -227,26 +227,25 @@ html{
     width: 10px;
     height: 10px;
     transform: translate(-50%, -50%);
-    background: white;
+    background: solid white;
     mix-blend-mode: difference;
     border-radius: 50%;
     pointer-events: none;
-    transition: width 0.5s height 0.5s;
-    pointer-events: none;
+    transition: width 0.5s, height 0.5s, background-color 0.5s;
     z-index: 9999
-  }
-  
-  .outer-cursor {
+}
+
+.outer-cursor {
     position: fixed;
     left: 10px;
-    width: 25px;
-    height: 25px;
+    width: 30px;
+    height: 30px;
     transform: translate(-50%, -50%);
     border: 2px solid white;
     mix-blend-mode: difference;
     border-radius: 50%;
     pointer-events: 0.1ms;
-    transition: 0.1s;
+    transition: 0.2s;
     pointer-events: none;
     z-index: 9999
-  }
+}
